fixed content overflow

--- a/blocks/cards/__items/cards__items.css
+++ b/blocks/cards/__items/cards__items.css
@@ -1,6 +1,6 @@
 .cards__items {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 282px);;
+  grid-template-columns: repeat(auto-fit, 282px);
   gap: 20px 17px;
   list-style-type: none;
   padding: 0px;
