--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -18,5 +18,6 @@
     text-align: center;
     font-size: 14px;
     line-height: 17px;
+    max-width: 284px;
   }
 }
